# explorer_ghost_cleaner

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  THIRD-PARTY-NOTICES.txt  build.rs
.cargo/: config.toml
config/: config.toml
docs/: README-ja.md
src/: format.rs  lib.rs  main.rs  system_ext.rs  ui.rs  worker.rs
src/worker/: os.rs
