[package]
name = "explorer_ghost_cleaner"
version = "0.1.0"

license = "MIT OR Apache-2.0"
repository = "https://github.com/menndouyukkuri/explorer_ghost_cleaner"
authors = [
	"menndouyukkuri",
]

edition = "2024"
build = "build.rs"

publish = false


[dependencies]
toml = "1.0"
tray-item = "0.10"
sysinfo = "0.38"

[dependencies.serde]
version = "1.0"
features = [
	"derive",
]

[dependencies.windows]
version = "0.62"
features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
]


[build-dependencies]
winres = "0.1"


[profile.speed-size]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "debuginfo"
